<resources>
    <string name="app_name" translatable="false">JARVIS</string>
    <string name="joy_topic">/cmd_vel</string>
    <string name="servo_topic">/joy_teleop/servo</string>
    <string name="user_command_topic">/jarvis/user_command</string>
    <string name="user_talk_topic">/jarvis/user_talk</string>
    <string name="voice_output_topic">/jarvis/audio</string>
    <string name="select_request_topic">/comm/msg/vision/select_request</string>
    <string name="camera_topic">/vision/rgb/image_rect_color/compressed</string>
    <string name="camera_labeled_topic">/vision/search/labeled_image/compressed</string>
    <string name="roi_topic">/jarvis/roi</string>
    <string name="vision_status_topic">/comm/msg/vision/mode</string>
    <string name="vision_console_topic">/comm/msg/vision/info</string>
    <string name="laser_scan_topic">/scan</string>
    <string name="odometry_topic">/odometry/filtered</string>
    <string name="pose_topic">/pose</string>
    <string name="navsat_topic">/navsat/fix</string>
    <string name="param_target_is_set">/comm/param/control/target/is_set</string>
    <string name="param_target_label">/comm/param/control/target/label</string>
    <string name="param_action_target_is_set">/vision/param/action/target/is_set</string>
    <string name="param_action_target_label">/vision/param/action/target/label</string>
    <string name="param_user_selected">/comm/param/control/target/selected</string>
    <string name="param_search_select_lock">/vision/select/param/lock</string>
    <string name="param_track_send_lock">/vision/track/param/lock</string>
    <string name="need_recognize_face">/vision/face/need_recognize</string>
    <string name="vision_common_pref">The vision system is </string>
    <string name="vision_common_surf"> the target </string>
    <string name="vision_wander_mode">wandering</string>
    <string name="vision_initial">Vision system initialized.</string>
    <string name="vision_choose">Enter target number. If no target, press the red button.</string>
    <string name="target_confirmed">Target has been set.</string>
    <string name="target_canceled">Target cancelled.</string>
    <string name="select_not_valid">Can not select target number.</string>
    <string name="send_not_valid">Cancel current target first to send new target.</string>
    <string name="need_set_target_label">Target label is needed.</string>
    <string name="recognize_face">Recognize faces in current scene.</string>
    <string name="joy_pref_title">Joystick Topic</string>
    <string name="servo_pref_title">Servo Topic</string>
    <string name="user_command_pref_title">User Command Topic</string>
    <string name="user_talk_pref_title">User Talk Topic</string>
    <string name="voice_output_pref_title">Voice Output Topic</string>
    <string name="laser_pref_title">Laser Scan Topic</string>
    <string name="camera_pref_title">Image Topic</string>
    <string name="navsat_pref_title">GPS Topic</string>
    <string name="topic_pref_title">Topics</string>
    <string name="warning_enable_pref_title">Enable Warning System</string>
    <string name="pose_pref_title">Pose Topic</string>
    <string name="odometry_pref_title">Odometry Topic</string>
    <string name="laser_scan_detail_pref_title">Laser Scan Detail</string>
    <string name="random_walk_range_minimum_pref_title">Random Walk Range Minimum</string>
    <string name="warning_pref_title">Warning System</string>
    <string name="warning_mindist_pref_title">Warning Distance</string>
    <string name="warning_safemode_pref_title">Safe Mode</string>
    <string name="warning_beep_pref_title">Warning Beeps</string>
    <string name="prefs_joystick_topic_edittext_key">prefs_joystick_topic_edittext</string>
    <string name="prefs_servo_topic_edittext_key">prefs_servo_topic_edittext</string>
    <string name="prefs_user_command_topic_edittext_key">prefs_user_command_topic_edittext</string>
    <string name="prefs_voice_output_topic_edittext_key">prefs_voice_output_topic_edittext</string>
    <string name="prefs_user_talk_topic_edittext_key">prefs_user_talk_topic_edittext</string>
    <string name="prefs_laserscan_topic_edittext_key">prefs_laserscan_topic_edittext</string>
    <string name="prefs_select_request_topic_edittext_key">prefs_select_request_topic_edittext</string>
    <string name="prefs_camera_topic_edittext_key">prefs_camera_topic_edittext</string>
    <string name="prefs_label_image_topic_edittext_key">prefs_label_image_topic_edittext</string>
    <string name="prefs_roi_topic_edittext_key">prefs_roi_topic_edittext</string>
    <string name="prefs_navsat_topic_edittext_key">prefs_navsat_topic_edittext</string>
    <string name="prefs_odometry_topic_edittext_key">prefs_odometry_topic_edittext</string>
    <string name="prefs_pose_topic_edittext_key">prefs_pose_topic_edittext</string>
    <string name="prefs_warning_checkbox_key">prefs_warning_checkbox</string>
    <string name="prefs_warning_mindist_key">prefs_warning_mindist</string>
    <string name="prefs_warning_system_key">prefs_warning_system</string>
    <string name="prefs_warning_safemode_key">prefs_warning_safemode</string>
    <string name="prefs_warning_beep_key">prefs_warning_beep_key</string>
    <string name="topic_pref_summary">Edit default topic names</string>
    <string name="warning_enable_pref_summary_off">Enable the Warning System for detecting imminent collisions</string>
    <string name="warning_enable_pref_summary_on">Disable the Warning System for detecting imminent collisions</string>
    <string name="warning_pref_summary">Edit Warning System settings</string>
    <string name="joy_pref_summary">
        Topic that the joystick widget publishes to.\nExpected message type: std_msgs/Twist\nValue: %s
    </string>
    <string name="servo_pref_summary">
        Topic that the servo widget publishes to.\nExpected message type: std_msgs/UInt32MultiArray\nValue: %s
    </string>
    <string name="user_command_pref_summary">
        Topic that the user voice command publishes to.\nExpected message type: audio_common_msgs/AudioData\nValue: %s
    </string>
    <string name="user_talk_pref_summary">
        Topic that the user talk publishes to.\nExpected message type: audio_common_msgs/AudioData\nValue: %s
    </string>
    <string name="voice_output_pref_summary">
        Topic that the robot voice feedback publishes to.\nExpected message type: audio_common_msgs/AudioData\nValue: %s
    </string>
    <string name="laser_pref_summary">
        Topic that the laser scan widget subscribes to.\nExpected message type: sensor_msgs/LaserScan\nValue: %s
    </string>
    <string name="camera_pref_summary">
        Topic that the camera widget subscribes to.\nExpected message type: sensor_msgs/CompressedImage\nValue: %s
    </string>
    <string name="odometry_pref_summary">
        Topic that the application gets odometry data from.\nExpected message type: nav_msgs/Odometry\nValue: %s
    </string>
    <string name="navsat_pref_summary">
        Topic that the application gets GPS data from.\nExpected message type: navsat/fix\nValue: %s
    </string>
    <string name="pose_pref_summary">Topic where the application gets pose information.
        \nExpected message type: geometry_msgs/Pose
        \nValue: %s
    </string>
    <string name="laser_scan_detail_pref_summary">Sets the detail level of the laser scan visualization.
        A higher number will draw more laser points\nValue: %s
    </string>
    <string name="random_walk_range_minimum_pref_summary">This is the minimum sensed range where
        the random walk algorithm will stop and turn\nValue: %s</string>
    <string name="warning_mindist_pref_summary">The minimum distance considered safe when moving at full speed\nValue: %s</string>
    <string name="warning_safemode_pref_summary_off">Enable to prevent the Robot from driving into walls</string>
    <string name="warning_safemode_pref_summary_on">Disable to allow the Robot to crash into walls</string>
    <string name="warning_beep_pref_summary_off">Enable warning beeps</string>
    <string name="warning_beep_pref_summary_on">Disable warning beeps</string>
    <string name="add_robot">Add Robot</string>
    <string name="edit_robot">Edit Robot</string>
    <string name="add_edit_robot">Add/Edit Robot</string>
    <string name="robot_name_hint">Robot Name</string>
    <string name="chooser_uri_hint">Master URI</string>
    <string name="no_robots">No Robots. Add a new one!</string>
    <string-array name="chooser_titles">
        <item>Select Robot</item>
        <item>Help</item>
        <item>About</item>
    </string-array>
    <string name="master_uri_key" translatable="false">MASTER_URI</string>
    <string name="delete">Delete</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="center">Center View</string>
    <string name="show_advanced_options">Show Advanced Options</string>
    <string name="ok">OK</string>
    <string name="voice_toggle_button">Switch Voice Output</string>
    <string name="voice_feedback_on">ON</string>
    <string name="voice_feedback_off">OFF</string>
    <string name="labeled_image">Label</string>
    <string name="live_image">Live</string>
    <string-array name="feature_titles">
        <item>Select Robot</item>
        <item>Overview</item>
        <item>Camera</item>
        <item>Robot</item>
        <item>Map</item>
        <item>Preferences</item>
        <item>About</item>
    </string-array>
    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>
    <string name="percent_string">%1$d%%</string>
    <string name="speed_string">%1$5.2f m/s</string>
    <string name="turnrate_string">%1$5.2f \u00B0/s</string>
    <string name="location_string">(%1$14s, %2$14s)</string>
    <string name="latitude">%1$14s</string>
    <string name="longitude">%2$14s</string>
    <string name="map_clear_string">Clear Waypoints</string>
    <string name="map_lock_camera_string">Lock Camera</string>
    <string name="control_mode">Control Mode: </string>
    <string name="robot_name">Robot Name:</string>
    <string name="master_uri" translatable="false">Master URI:</string>
    <string name="joystick_topic_prompt">Joystick Topic:</string>
    <string name="servo_topic_prompt">Servo Topic:</string>
    <string name="user_command_topic_prompt">User Command:</string>
    <string name="user_talk_topic_prompt">User Talk Topic:</string>
    <string name="voice_output_topic_prompt">Voice Output Topic:</string>
    <string name="camera_topic_prompt">Camera Topic:</string>
    <string name="laserscan_topic_prompt">Laser Scan Topic:</string>
    <string name="navsat_topic_prompt">Nav Sat Topic:</string>
    <string name="odometry_topic_prompt">Odometry Topic:</string>
    <string name="pose_topic_prompt">Pose Topic:</string>
    <string name="wifi_strength_content_description">Shows WIFI signal strength</string>
    <string name="gps_icon_content_description">GPS icon</string>
    <string name="speedometer_icon_content_description">Speedometer icon</string>
    <string name="voice_icon_content_description">Communicate with robot</string>
    <string name="tilt_calibration_message">Tap the joystick to reset calibration</string>
    <string name="use_tilt_sensor_string">Use Tilt</string>
    <string name="joystick_control">Joystick Control</string>
    <string name="servo_control">Servo Control</string>
    <string name="motion_control">Tilt Control</string>
    <string name="simple_waypoint_control">Simple Waypoint Control</string>
    <string name="waypoint_control">Waypoint Control</string>
    <string name="random_walk">Random Walk</string>
    <string-array name="motion_plans">
        <item>Joystick</item>
        <item>Tilt</item>
        <item>Simple Waypoint</item>
        <item>Waypoint</item>
        <item>Random Walk</item>
    </string-array>
</resources>