<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_voice_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <ToggleButton
        tools:text="@string/voice_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/voice_toggle_button"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textOff="@string/voice_feedback_off"
        android:textOn="@string/voice_feedback_on" />

    <com.robotca.ControlApp.Views.VoiceView
        android:id="@+id/voice_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/voice_toggle_button"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

</RelativeLayout>