<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="2dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:clickable="false">

        <LinearLayout
            android:id="@+id/robot_info_text"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/robot_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/unknown"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/master_uri_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/unknown"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/wifi_0"
                android:id="@+id/robot_wifi_image"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/wifi_strength_content_description">
            </ImageView>
            <ImageButton
                android:id="@+id/robot_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_black_24dp"
                android:contentDescription="@string/edit_robot" />
            <ImageButton
                android:id="@+id/robot_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_black_24dp"
                android:contentDescription="@string/delete" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>